# dotfiles

./: .gitattributes  .gitignore  README.md  TO_INSTALL.md  makefile  restow.sh
.keyd/: README.md  default.conf
.misc/: README  debx.sh  fsdiff.sh  gitgum  ocix.sh  path_color.py  rockx.sh  temp.sh
alacritty/.config/alacritty/: alacritty.toml
claude/.claude/: CLAUDE.md
docker/.docker/: env
fish/.config/fish/: config.fish  fish_variables  logo.fish  lxc-throwaway.fish
git/.config/git/: config
keyd/.config/keyd/: app.conf
local/.local/: env.fish
mako/.config/mako/: config
nvim/.config/nvim/: lazy-lock.json
rofi/.config/rofi/: config.rasi
stow/common/fish/: .gitignore
stow/common/go/go/: env  (+1 more)
sway/.config/sway/: config
tests/agents/: shared-assets.bats
tests/debx/: guards.bats  help.bats  parse_args.bats  tree.bats
tests/fish/: scrub-history.bats
tests/git/: codexcfg.bats
tests/hooks/: adapters.bats  block-dangerous.bats  commit-msg.bats  copilot.bats  discourage-bare-tail.bats  enforce-log-suffix.bats  enforce-tmp-ai.bats  enforce-tmp-claude.bats  evaluate.bats  pre-commit.bats  pre-push.bats  prepare-commit-msg.bats
tests/py/: conftest.py  test_opacity.py  test_spawn_term.py
tests/statusline/: caveman.bats  colour.bats  context.bats  dispatcher.bats  git-branch.bats  model.bats
tools/auto-commit/: README.md  pyproject.toml
tools/auto-commit/auto_commit/: _log.py  cli.py  generate.py  git.py
tools/auto-commit/auto_commit/completions/: __init__.py  auto-commit.fish
tools/auto-commit/tests/: test_generate.py  test_git.py
tools/claude-commit/: .gitignore  README.md  pyproject.toml
tools/claude-commit/claude_commit/: __init__.py  _log.py  cli.py  generate.py  git.py
tools/claude-commit/tests/: test_generate.py
tools/funnel/: Cargo.toml
tools/funnel/benches/: funnel.rs
tools/funnel/src/: lib.rs  main.rs  wrap.rs
tools/mosaic/: Cargo.toml
tools/mosaic/src/: main.rs
tools/peek/: Cargo.toml
tools/time_fuzzer/: Cargo.toml
(+202 files in other folders)
