[build-system]
requires = ["uv_build>=0.5.15,<0.9"]
build-backend = "uv_build"

[project]
name = "auto-commit"
authors = [{ name = "Marcin Konowalczyk", email = "marcin.konow@lczyk.xyz" }]
version = "0.1.0"
description = "tiny cli to generate conventional-commit messages with the cheapest claude model"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    #
]

[project.scripts]
auto-commit = "auto_commit:cli.main"

[tool.uv.build-backend]
module-name = "auto_commit"
module-root = ""

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    #
]

[dependency-groups]
dev = [
    "ruff>=0.11.2",
    "pytest>=8",
    #
]
