[package]
name = "funnel"
version = "0.4.0"
edition = "2024"
build = "build.rs"

[dependencies]
notify = "6"
libc = "0.2"
version = { git = "https://github.com/lczyk/version", tag = "rust/v0.4.0" }
polyflag = "0.3.0"

[build-dependencies]
version = { git = "https://github.com/lczyk/version", tag = "rust/v0.4.0" }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "funnel"
harness = false

