[package]
name = "mosaic"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
eframe = "0.31"
egui_glow = "0.31"
fontdue = { version = "0.9", default-features = false, features = ["std"] }
glow = "0.16"
image = "0.25"
notify = "6"
polyflag = "0.3.0"
funnel = { path = "../funnel" }
version = { git = "https://github.com/lczyk/version", tag = "rust/v0.4.0" }

[build-dependencies]
version = { git = "https://github.com/lczyk/version", tag = "rust/v0.4.0" }
